Falling Rocks Implementation and Placement

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,6 +101,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=200,Y=165)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -128,8 +129,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 SnapScaleEnabled=False
 CurrentRotGridSize=0
-RotGridEnabled=False
 CurrentPosGridSize=0
+CameraSpeed=5
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -152,7 +153,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Sprites
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -163,11 +164,11 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000
-ContentBrowserTab2.ActiveTypeFilters=PaperSprite
-ContentBrowserTab2.EnabledTypeFilters=PaperSprite
+ContentBrowserTab2.ActiveTypeFilters=
+ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Sprites
+ContentBrowserTab2.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -846,7 +847,7 @@ PaperSpriteComponent.VirtualTexture=True
 PaperSpriteComponent.Navigation=True
 PaperSpriteComponent.Rendering=True
 PaperSpriteComponent.Lighting=True
-PaperSpriteComponent.Collision=False
+PaperSpriteComponent.Collision=True
 PaperSpriteComponent.Physics=False
 PaperSpriteComponent.Materials=False
 PaperSpriteComponent.Sprite=True
@@ -2080,13 +2081,21 @@ Spawnpoint_Rock_C.Collision=True
 Spawnpoint_Rock_C.Actor=True
 Spawnpoint_Rock_C.Input=True
 Spawnpoint_Rock_C.TransformCommon=True
+Spawnpoint_Rock_C.Default=True
+FallingRock_C.Default=True
+AssetManagerSettings.Asset Registry=True
+Engine.LevelStreaming=True
+RecastNavMesh.LOD=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Rock.Spawnpoint_Rock
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/FallingRock.FallingRock
 
 [RootWindow]
-ScreenPosition=X=285.600 Y=0.000
-WindowSize=X=1274.400 Y=714.400
+ScreenPosition=X=1965.000 Y=40.000
+WindowSize=X=1274.000 Y=714.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2976,26 +2985,26 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/RobotFly
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Rock
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Spawnpoint
-MRUItem3=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Start
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Crane
-MRUItem5=/Game/ThirdPersonBP/Blueprints/FallingRock
-MRUItem6=/Game/ThirdPersonBP/Blueprints/RollingRock
-MRUItem7=/Game/Sprites/n_mouse_dead
-MRUItem8=/Game/Sprites/SourceTextures/mouse
-MRUItem9=/Game/Sprites/mouse_dead
-MRUItem10=/Game/Sprites/mouse_glide
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem12=/Game/Sprites/Mushroom_Brown_Small1
-MRUItem13=/Game/Sprites/mouse_idle_back
-MRUItem14=/Game/Sprites/SourceTextures/mushroom-skirt
-MRUItem15=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem16=/Game/ThirdPersonBP/Blueprints/PlayerAnimator
-MRUItem17=/Game/Sprites/falling_rock_tri2
-MRUItem18=/Game/Sprites/falling_rock_tri1
-MRUItem19=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/ThirdPersonBP/Blueprints/FallingRock
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Rock
+MRUItem3=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
+MRUItem4=/Game/ThirdPersonBP/Blueprints/RobotFly
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Spawnpoint
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Start
+MRUItem7=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem8=/Game/ThirdPersonBP/Blueprints/RollingRock
+MRUItem9=/Game/Sprites/n_mouse_dead
+MRUItem10=/Game/Sprites/SourceTextures/mouse
+MRUItem11=/Game/Sprites/mouse_dead
+MRUItem12=/Game/Sprites/mouse_glide
+MRUItem13=/Game/Sprites/Mushroom_Brown_Small1
+MRUItem14=/Game/Sprites/mouse_idle_back
+MRUItem15=/Game/Sprites/SourceTextures/mushroom-skirt
+MRUItem16=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem17=/Game/ThirdPersonBP/Blueprints/PlayerAnimator
+MRUItem18=/Game/Sprites/falling_rock_tri2
+MRUItem19=/Game/Sprites/falling_rock_tri1
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -3116,7 +3125,7 @@ None=======
 /Game/ThirdPersonBP/Blueprints/FlyProjectile.FlyProjectile=1
 /Game/Sprites/SourceTextures/fly.fly=0
 /Game/ThirdPersonBP/Blueprints/AbilityPickup.AbilityPickup=1
-/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent.AbilityPickup_Parent=1
+/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent.AbilityPickup_Parent=0
 /Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice.AbilityPickup_Ice=0
 /Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump.AbilityPickup_SuperJump=1
 /Game/Sprites/SourceTextures/treeline_small2.treeline_small2=0
@@ -3233,9 +3242,9 @@ None=======
 /Game/Sprites/n_mouse_idle_back.n_mouse_idle_back=1
 /Game/Sprites/n_mouse_idle_front.n_mouse_idle_front=1
 /Game/Sprites/n_mouse_glide.n_mouse_glide=1
-/Game/ThirdPersonBP/Blueprints/FallingRock.FallingRock=0
+/Game/ThirdPersonBP/Blueprints/FallingRock.FallingRock=1
 /Game/ThirdPersonBP/Blueprints/RollingRock.RollingRock=0
-/Game/ThirdPersonBP/Blueprints/Spawnpoint_Rock.Spawnpoint_Rock=0
+/Game/ThirdPersonBP/Blueprints/Spawnpoint_Rock.Spawnpoint_Rock=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3274,8 +3283,9 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
-RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Rock.Spawnpoint_Rock;
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump.AbilityPickup_SuperJump;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/FallingRock.FallingRock;
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Spawnpoint_Rock.Spawnpoint_Rock;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/Sprites/treeline_small1.treeline_small1;
 RecentlyPlaced=/Game/Sprites/treeline_bush2.treeline_bush2;
@@ -3284,7 +3294,6 @@ RecentlyPlaced=/Game/Sprites/treeline_large3.treeline_large3;
 RecentlyPlaced=/Game/Sprites/treeline_large2.treeline_large2;
 RecentlyPlaced=/Game/Sprites/treeline_bush1.treeline_bush1;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump.AbilityPickup_SuperJump;
 RecentlyPlaced=/Game/Sprites/falling_rock_tri2.falling_rock_tri2;
 RecentlyPlaced=/Game/Sprites/falling_rock_tri1.falling_rock_tri1;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/WaterDeathZone.WaterDeathZone;
@@ -3309,14 +3318,14 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-Object="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+Object=
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Clip="\"Object.Settings\" "
 CharacterMovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
 PawnMovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
 NavMovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
 MovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+ActorComponent=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 Widget="\"Object.RenderTransform\" "
@@ -3338,10 +3347,10 @@ Crane_C=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
-PaperSpriteComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+PaperSpriteComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Tags.ComponentTags\" "
+MeshComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+SceneComponent=
 grass_clump_2_Sprite_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Bush4_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Bush2_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -3390,12 +3399,12 @@ Vine8_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance
 Vine9_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 RobotFly_C="\"Object.TimeBetweenShots\" "
-CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 PaperFlipbookComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 FlyProjectile_C=
-SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 ChildActorComponent="\"Object.Tags.ComponentTags\" "
 Landscape="\"Object.Landscape.LandscapeMaterialsOverride\" "
@@ -3410,7 +3419,7 @@ rock4_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance
 treeline_bush1_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 treeline_bush2_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AudioSettings="\"Object.Quality.QualityLevels\" \"Object.Quality.QualityLevels.QualityLevels[0]\" "
-ConsoleSettings="\"Object.AutoComplete.ManualAutoCompleteList\" \"Object.AutoComplete.AutoCompleteMapPaths\" "
+ConsoleSettings="\"Object.AutoComplete.ManualAutoCompleteList\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[22]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[28]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[29]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[31]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[32]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[33]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[34]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[35]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[75]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[86]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[94]\" \"Object.AutoComplete.AutoCompleteMapPaths\" "
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths\" "
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" \"Object.TrackSettings.FbxSettings.FbxSettings[0].PropertyPath\" \"Object.TrackSettings.FbxSettings.FbxSettings[1]\" \"Object.TrackSettings.FbxSettings.FbxSettings[1].PropertyPath\" \"Object.TrackSettings.FbxSettings.FbxSettings[2]\" \"Object.TrackSettings.FbxSettings.FbxSettings[2].PropertyPath\" "
@@ -3422,14 +3431,15 @@ MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
 ArrowComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+SkeletalMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Tags.ComponentTags\" "
 CameraComponent="\"Object.Tags.ComponentTags\" "
 SpringArmComponent="\"Object.Tags.ComponentTags\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 FallingRock_C=
 Spawnpoint_Rock_C=
+CookerSettings="\"Object.Cooker.ClassesExcludedOnDedicatedServer\" \"Object.Cooker.ClassesExcludedOnDedicatedClient\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3452,6 +3462,8 @@ StaticMeshActor.StaticMesh=True
 PaperSprite.Sprite=False
 ThirdPersonCharacter_C.Actor=True
 FoliageType_Actor.InstanceSettings=False
+PhysicsSettings.Constants=False
+SphereComponent.Collision=True
 
 [MaterialEditor]
 PrimType=1
@@ -3674,13 +3686,13 @@ ThirdPersonCharacter_C=
 CharacterMovementComponent=
 Crane_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-PaperSpriteComponent=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
+PaperSpriteComponent=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PaperSpriteComponent.Collision.Collision,
 ModelingToolsEditorModeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,
 Spawnpoint_C=ThirdPersonCharacter_C.Rendering.LOD,
 Spawnpoint_Start_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
-CapsuleComponent=
+CapsuleComponent=CapsuleComponent.Collision.Collision,
 SceneComponent=
-BrushComponent=
+BrushComponent=StaticMeshActor.Collision.Collision,
 Actor=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 BP_Sky_Sphere_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 Brush=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
@@ -3688,7 +3700,7 @@ Vine_Blueprint_C=ThirdPersonCharacter_C.Rendering.LOD,
 Landscape=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 PostProcessVolume=ThirdPersonCharacter_C.Rendering.LOD,
 BlockingVolume=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
-BarrierTree_C=ThirdPersonCharacter_C.Rendering.LOD,
+BarrierTree_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 RobotFly_C=
 PropertyWrapper=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
@@ -3708,8 +3720,12 @@ PrimitiveComponent=
 FallingRock_C=
 ArrowComponent=
 StaticMeshComponent=
-Spawnpoint_Rock_C=
+Spawnpoint_Rock_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 Widget=
+SphereComponent=SphereComponent.Collision.Collision,
+StaticMeshActor=StaticMeshActor.Collision.Collision,
+PaperSpriteActor=PaperSpriteActor.Collision.Collision,
+PaperGroupedSpriteActor=PaperGroupedSpriteActor.Collision.Collision,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3771,7 +3787,7 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
