--- a/A_Mouse_Tale/Saved/Config/Windows/Engine.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/Engine.ini
@@ -54,3 +54,8 @@ MLSDKPath=(Path="")
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[Oculus.Settings]
+GraphicsAdapter=0
+AudioInputDevice="{0.0.1.00000000}.{b06a4f4e-b4dc-4f84-ad8b-268da100ae6f}"
+AudioOutputDevice="{0.0.0.00000000}.{aadc9ec5-9097-4756-af71-3ecdf8b5e8c5}"
+
