--- a/A_Mouse_Tale/Saved/Config/Windows/GameUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/GameUserSettings.ini
@@ -1,12 +1,12 @@
 [/Script/Engine.GameUserSettings]
 bUseVSync=False
 bUseDynamicResolution=False
-ResolutionSizeX=2048
-ResolutionSizeY=1152
-LastUserConfirmedResolutionSizeX=2048
-LastUserConfirmedResolutionSizeY=1152
-WindowPosX=-1
-WindowPosY=-1
+ResolutionSizeX=1680
+ResolutionSizeY=1027
+LastUserConfirmedResolutionSizeX=1680
+LastUserConfirmedResolutionSizeY=1027
+WindowPosX=0
+WindowPosY=23
 FullscreenMode=1
 LastConfirmedFullscreenMode=1
 PreferredFullscreenMode=1
@@ -26,4 +26,15 @@ LastGPUBenchmarkResult=-1.000000
 LastGPUBenchmarkMultiplier=1.000000
 bUseHDRDisplayOutput=False
 HDRDisplayOutputNits=1000
+
+[ScalabilityGroups]
+sg.ResolutionQuality=100.000000
+sg.ViewDistanceQuality=3
+sg.AntiAliasingQuality=3
+sg.ShadowQuality=3
+sg.PostProcessQuality=3
+sg.TextureQuality=3
+sg.EffectsQuality=3
+sg.FoliageQuality=3
+sg.ShadingQuality=3
 
